force-app/main/default/objects/Requirement__c/fields/Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is responsible for gathering details for this requirement?</description>
    <inlineHelpText>Who is responsible for gathering details for this requirement?</inlineHelpText>
    <label>Business Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>