force-app/main/default/objects/Requirement__c/fields/MoSCoW_Priority__c.field-meta.xml
<CustomField>
    <fullName>MoSCoW_Priority__c</fullName>
    <description>Priority using the MoSCoW method scale</description>
    <label>MoSCoW Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MoSCoW_method</valueSetName>
    </valueSet>
</CustomField>