force-app/main/default/objects/Requirement__c/fields/Parent_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Sub-Requirements</relationshipLabel>
    <relationshipName>Sub_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>