force-app/main/default/objects/Requirement__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <description>JIRA Issue, Asana Task or other ticketing system URL if applicable</description>
    <inlineHelpText>JIRA Issue, Asana Task or other ticketing system URL if applicable</inlineHelpText>
    <label>Request URL</label>
    <type>Url</type>
</CustomField>