force-app/main/default/objects/Requirement__c/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is responsible for designing the solution for this requirement?</description>
    <inlineHelpText>Who is responsible for designing the solution for this requirement?</inlineHelpText>
    <label>Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>