force-app/main/default/objects/Requirement__c/fields/Solution_Options__c.field-meta.xml
<CustomField>
    <fullName>Solution_Options__c</fullName>
    <label>Solution Options</label>
    <summaryForeignKey>Solution_Option__c.Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>