force-app/main/default/objects/Requirement__c/fields/Ticketing_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_System_ID__c</fullName>
    <businessOwnerUser>meredith@tidyops.co.dev01</businessOwnerUser>
    <inlineHelpText>JIRA Issue number, Asana Task name or other ticketing system ID if applicable (e.g. ZS-525)</inlineHelpText>
    <label>Ticketing System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>