force-app/main/default/objects/Requirement__c/fields/Total_Versions__c.field-meta.xml
<CustomField>
    <fullName>Total_Versions__c</fullName>
    <label>Total Versions</label>
    <summaryForeignKey>Requirement_Version__c.Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>