force-app/main/default/objects/Requirement__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <description>https://www.mountaingoatsoftware.com/agile/user-stories</description>
    <inlineHelpText>As a &lt;type of user&gt;, 
I want &lt;some goal&gt; 
so that &lt;some business reason&gt;</inlineHelpText>
    <label>User Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>