force-app/main/default/objects/Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Requestor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Versions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>