force-app/main/default/objects/Requirement__c/listViews/All_Concord.listView-meta.xml
<ListView>
    <fullName>All_Concord</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>MoSCoW_Priority__c</columns>
    <columns>Total_Versions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Concord</value>
    </filters>
    <label>All Concord</label>
</ListView>