force-app/main/default/objects/Requirement__c/listViews/Concord_CRM_Requirements.listView-meta.xml
<ListView>
    <fullName>Concord_CRM_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>Status__c</columns>
    <columns>MoSCoW_Priority__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Concord CRM Evaluation</value>
    </filters>
    <filters>
        <field>Parent_Requirement__c</field>
        <operation>equals</operation>
    </filters>
    <label>Concord CRM Top-level Requirements</label>
</ListView>