force-app/main/default/objects/Requirement__c/listViews/Concord_Service_Cloud_Proof_of_Concept.listView-meta.xml
<ListView>
    <fullName>Concord_Service_Cloud_Proof_of_Concept</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Business_Analyst__c</columns>
    <columns>Solution_Options__c</columns>
    <columns>MoSCoW_Priority__c</columns>
    <columns>Parent_Requirement__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requestor__c</field>
        <operation>equals</operation>
        <value>Dan Tierney</value>
    </filters>
    <label>Concord Customer Service Technology</label>
</ListView>