force-app/main/default/objects/Requirement__c/listViews/Requirements_Management_App.listView-meta.xml
<ListView>
    <fullName>Requirements_Management_App</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Requirements Management App</value>
    </filters>
    <label>Requirements Management App</label>
</ListView>