force-app/main/default/objects/Requirement__c/listViews/Sealed_Requirements.listView-meta.xml
<ListView>
    <fullName>Sealed_Requirements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Sealed</value>
    </filters>
    <label>Sealed Requirements</label>
</ListView>